# dockix

./: README.md  package-lock.json  package.json  patchnotes.md
.devcontainer/: devcontainer.json
.github/workflows/: build-windows.yml
backend/: .gitignore  Cargo.toml  openapi.yaml
backend/src/: auth.rs  db.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  repo.rs  repo_handlers.rs  sync.rs  user_handlers.rs
backend/src/parsers/: javascript.rs  mod.rs  python.rs
frontend/: Dockix.jsx  README.md  index.html  package-lock.json  package.json  wizualizacja
frontend/src/: App.jsx  App.tsx
frontend/src/components/: Log.tsx  ProjectCard.tsx  Sidebar.tsx
frontend/src/pages/: AdminDashboard.tsx  Dashboard.tsx  Documentation.tsx  GuestDocumentation.tsx  Indexing.tsx  LandingPage.tsx  Onboarding.tsx  Project.tsx  ProjectManagement.tsx  Settings.tsx  UserInformation.tsx
notes/: kosztorys_projekt_dockix.xlsx  patchnotes  patchnotes.md
src/: App.jsx
