[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
git2 = "0.20.4"
url = "2"
walkdir = "2.4"
tree-sitter = "0.22"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.21"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
