[package]
name = "backend"
version = "0.1.0"
edition = "2024"

default-run = "backend"

[dependencies]
git2 = "0.20.4"
url = "2"
walkdir = "2.4"
tree-sitter = "0.22"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.21"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.26"
crossterm = "0.27"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
argon2 = "0.5"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
